--- a/transiciones/estilos.css
+++ b/transiciones/estilos.css
@@ -35,18 +35,34 @@
 }
 
 #transicion2{
-    background: orange;
-    width: 50px;
-    height: 150px;
-    animation: mover-derecha 2s ease-in;
+    background: coral;
+    width: 250px;
+    height: 250px;
+    border-radius: 10px;
+    animation: mover 5s infinite;
     animation-delay: 1000ms;
 }
-@keyframes mover-derecha{
+@keyframes mover{
     0%{
         transform: translateX(0%);
     }
+    25%{
+        transform: translateX(200px);
+        /* width: 300px;
+        height: 300px;
+        border-radius: 50%; */
+        background: linear-gradient(120deg, red, 0%, darkred 100%);
+    }
+    50%{
+        transform: translateY(200px) translateX(200px);
+        background: linear-gradient(to top, blue 0% darkblue 100%);
+    }
+    75%{
+        transform: translateX(0px) translateY(200px);
+        background: linear-gradient(to top, orange 0%  coral 100%);
+    }
     100%{
-        
+        transform: translateY(0px);
     }
 }
 
