--- a/imagenes/estilos.css
+++ b/imagenes/estilos.css
@@ -26,10 +26,19 @@
 
 .imagen3{
     width: 100%;
-    opacity: 0.5;
+    /* opacity: 0.5; */
+}
+.imagen{
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
 }
 
 .lobo{
+    position: relative;
     width: 80%;
     background-color: white;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.19);
@@ -40,4 +49,32 @@
     text-align: center;
     font-size: 20px;
     padding: 10px 10px;
+}
+
+.texto_lobo{
+    /* position: absolute;
+    bottom: 88px;
+    right: 16px;
+    transform: translate(-50%, -50%);
+    font-size: 48px; */
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.lobo:hover .imagen3{
+    opacity: 0.3;
+}
+
+.lobo:hover .texto_lobo{
+    opacity: 1;
+}
+.efect_text{
+    background-color: red;
+    color: white;
+    font-size: 38px;
+    padding: 6px 22px;
 }
